# semuta

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/app/: app.rs  mod.rs
src/audio/: mod.rs
src/db/: albums.rs  artists.rs  mod.rs  schema.rs  tracks.rs
src/model/: album.rs  artist.rs  identifier.rs  mod.rs  track.rs
src/ui/: build.rs  display.rs  input.rs  mod.rs  render.rs
