[package]
name = "semuta"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
walkdir = "2.4"
rusqlite = { version = "0.38", features = ["bundled"] }
lofty = "0.22.4"
anyhow = "1.0"
ratatui = "0.29"
crossterm = "0.29"
rodio = "0.21.1"
clap = { version = "4.4", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.146"
